[metadata]
name = mobilemoney
version = 0.0.1
description = Carry out Collections and Disbursements using MTN and Airtel Mobile Money in Uganda and Africa
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django, urlshortener, web
url = https://github.com/open-ug/mobilemoney-py
author = Beingana Jim Junior
author_email = jimjunior854@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.0  # Replace "X.Y" as appropriate