[metadata]
name = ugmobilemoney
version = 0.0.2
description = Carry out Collections and Disbursements using MTN and Airtel Mobile Money in Uganda and Africa
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mobilemoney, uganda, africa, airtel, python, payments, collections, disbursements, mtn
url = https://github.com/open-ug/ugmobilemoney-py
author = Beingana Jim Junior
author_email = jimjunior854@gmail.com
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    httpx >= 0.21.0  # Replace "X.Y" as appropriate
    xmltodict >= 0.13.0  # Replace "X.Y" as appropriate