[metadata]
name = ugmobilemoney
version = 0.0.7
description = Carry out Mobile Money Collections and Disbursements from various providers in Uganda
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mobilemoney, uganda, africa, airtel, python, payments, collections, disbursements, mtn
url = https://github.com/open-ug/ugmobilemoney-py
author = Beingana Jim Junior
author_email = jimjunior854@gmail.com
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    httpx >= 0.21.0  
    xmltodict >= 0.13.0  
    pycryptodome >= 3.20.0